objects/Cloud_Forecast_Month__c.object
<CustomObject>
    <fields>
        <fullName>Cloud_Billing_Phase__c</fullName>
        <label>Cloud Billing Phase</label>
        <referenceTo>Cloud_Billing_Phase__c</referenceTo>
        <relationshipLabel>Cloud Forecast Month</relationshipLabel>
        <relationshipName>Cloud_Forecast_Month</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Month_Date__c</fullName>
        <label>Month Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_Quarter__c</fullName>
        <formula>IF(MONTH(Month_Date__c) &gt; 9, 4,
   IF(MONTH(Month_Date__c) &gt; 6, 3,
       IF(MONTH(Month_Date__c) &gt; 3, 2, 1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Revenue1__c</fullName>
        <label>Month Revenue1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Revenue__c</fullName>
        <formula>(Cloud_Billing_Phase__r.Phase_Revenue__c / 30) * Number_of_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Days__c</fullName>
        <label>Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cloud Forecast Month</label>
    <nameField>
        <label>Cloud Forecast Month Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cloud Forecast Month</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>